kubernetes/apps/default/kube-dashboard/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kube.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-dashboard
          port: 8443
      middlewares:
        - name: traefik-middleware-chains-default
          namespace: networking
  tls:
    secretName: kube-dashboard
